--- a/src/main/resources/mainPageContent/send.fxml
+++ b/src/main/resources/mainPageContent/send.fxml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER_RIGHT" prefHeight="310.0" prefWidth="430.0"
-      spacing="20"
-      xmlns="http://javafx.com/javafx/11.0.14-internal"
-      fx:controller="com.email.sys.controllers.MainPageController">
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+
+<VBox alignment="BOTTOM_RIGHT" prefHeight="310.0" prefWidth="430.0" spacing="20" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.email.sys.controllers.MainPageController">
     <padding>
-        <Insets left="10" right="10"/>
+        <Insets left="10" right="10" bottom="10" top="10" />
     </padding>
 
-    <TextField promptText="To:"/>
-    <TextArea prefHeight="200.0" prefWidth="200.0" promptText="Enter your text here"/>
-    <Button contentDisplay="CENTER" mnemonicParsing="false" styleClass="primary-button" text="Button"/>
+    <TextField promptText="To:" />
+    <TextArea prefHeight="200.0" prefWidth="200.0" promptText="Enter your text here" />
+    <Button contentDisplay="CENTER" mnemonicParsing="false"
+            styleClass="primary-button" text="Button"/>
 </VBox>
