--- a/src/main/resources/signUp.fxml
+++ b/src/main/resources/signUp.fxml
@@ -2,30 +2,29 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
-<HBox alignment="CENTER" prefHeight="349.0" prefWidth="447.0"
+<HBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" prefHeight="349.0"
+      prefWidth="447.0"
       xmlns="http://javafx.com/javafx/11.0.14-internal"
-      xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.email.sys.controllers.SignUpController">
-       <VBox alignment="CENTER" spacing="20" stylesheets="styles.css">
-           <VBox alignment="CENTER" spacing="20">
-               <Label styleClass="header-label" text="Sign Up" />
-               <GridPane alignment="CENTER" hgap="10" vgap="10">
-                   <Label styleClass="form-label" text="Username:" />
-                   <TextField fx:id="signupUsernameForm" styleClass="form-field" GridPane.columnIndex="1" />
+    <VBox alignment="CENTER" spacing="20" stylesheets="styles.css">
+        <VBox alignment="CENTER" spacing="20">
+            <Label styleClass="header-label" text="Sign Up"/>
+            <GridPane alignment="CENTER" hgap="10" vgap="10">
+                <Label styleClass="form-label" text="Email:" GridPane.rowIndex="1"/>
+                <TextField fx:id="emailField" styleClass="form-field" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 
-                   <Label styleClass="form-label" text="Email:" GridPane.rowIndex="1" />
-                   <TextField styleClass="form-field" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label styleClass="form-label" text="Password:" GridPane.rowIndex="2"/>
+                <PasswordField fx:id="passwordField" styleClass="form-field" GridPane.columnIndex="1"
+                               GridPane.rowIndex="2"/>
 
-                   <Label styleClass="form-label" text="Password:" GridPane.rowIndex="2" />
-                   <PasswordField styleClass="form-field" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-
-                   <Label styleClass="form-label" text="Confirm Password:" GridPane.rowIndex="3" />
-                   <PasswordField styleClass="form-field" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-               </GridPane>
-               <Button styleClass="primary-button" text="Sign Up" />
-               <Button fx:id="returnButton" onAction="#returnBackToLogin"
-                       styleClass="secondary-button" text="Return to Log In"/>
-           </VBox>
-       </VBox>
+                <Label styleClass="form-label" text="Confirm Password:" GridPane.rowIndex="3"/>
+                <PasswordField fx:id="confirmPasswordField" styleClass="form-field" GridPane.columnIndex="1"
+                               GridPane.rowIndex="3"/>
+            </GridPane>
+            <Label fx:id="errorLabel" managed="false" styleClass="error-message"/>
+            <Button fx:id="submitButton" styleClass="primary-button" text="Sign Up"/>
+            <Button fx:id="returnButton"
+                    styleClass="secondary-button" text="Return to Log In"/>
+        </VBox>
+    </VBox>
 </HBox>
