--- a/src/main/resources/mainPageContent/inbox.fxml
+++ b/src/main/resources/mainPageContent/inbox.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<SplitPane dividerPositions="0.23" orientation="VERTICAL" stylesheets="@contentsStyles.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.email.sys.controllers.InboxController">
+<SplitPane dividerPositions="0.23, 0.5" orientation="VERTICAL" stylesheets="@contentsStyles.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.email.sys.controllers.InboxController">
     <TitledPane text="Inbox">
         <HBox alignment="CENTER" spacing="20">
             <TextField fx:id="searchBar" promptText="Type keywords" styleClass="search-bar" />
@@ -11,4 +11,5 @@
         </HBox>
     </TitledPane>
     <ListView fx:id="emails" styleClass="email-list" />
+   <Pane fx:id="contentPane" prefHeight="200.0" prefWidth="200.0" />
 </SplitPane>
